feat(donjon): add import structure as donjon instead of generate throw vanilla